2010-01-02 [holger]	0.2cvs19

	* src/foldertype.c
		Add accessor for identifier

2009-12-30 [holger]	0.2cvs18

	* src/composewindowtype.c
	* src/foldertype.c
	* src/foldertype.h
		Add access to "save message to" setting of compose window

2009-12-30 [holger]	0.2cvs17

	* src/composewindowtype.c
		Add accessor to account selection combo box

2009-12-30 [holger]	0.2cvs16

	* src/composewindowtype.c
		Allow setting of custom headers in compose window

2009-12-29 [holger]	0.2cvs15

	* src/composewindowtype.c
		Add accessor for headers set in the compose window

2009-12-22 [holger]	0.2cvs14

	* README
		Update documentation

2009-12-22 [holger]	0.2cvs13

	* src/composewindowtype.c
		Add possibility to manipulate the "From" entry of
		a compose window

2009-12-22 [holger]	0.2cvs12

	* src/python_plugin.c
		Add startup and shutdown scripts

2009-12-20 [holger]	0.2cvs11

	* README
	* src/python_plugin.c
		Rename auto/compose to auto/compose_any.
		Maybe there'll be an extension in the future
		to have separate scripts for fresh composing,
		reply, forward etc some day

2009-12-20 [holger]	0.2cvs10

	* src/composewindowtype.c
		Add accessor for subject
	* README
	* src/python_plugin.c
		Add auto-triggered script for compose

2009-12-20 [holger]	0.2cvs9

	* README
		Update README

2009-12-20 [holger]	0.2cvs8

	* src/python_plugin.c
		Add menu items to compose window

2009-12-20 [holger]	0.2cvs7

	* src/clawsmailmodule.c
	* src/clawsmailmodule.h
	* src/composewindowtype.c
	* src/composewindowtype.h
	* src/python_plugin.c
		Python scripts for the compose window.
		Toolbar buttons done, menu still left to do.

2009-12-19 [holger]	0.2cvs6

	* src/python_plugin.c
		Register mainwindow scripts for mainwindow toolbar

2009-12-19 [holger]	0.2cvs5

	* .cvsignore
		More files to ignore
	* README
	* src/python_plugin.c
		Move scripts to "main" subdir

2009-11-17 [holger]	0.2cvs4

	* configure.ac
	* src/python_plugin.c
		Bump required Claws Mail version to 3.7.3.14
