@@ -18,3 +18,4 @@
 ( cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/composewindowtype.c;  ) > 0.2cvs17.patchset
 ( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/composewindowtype.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/foldertype.c;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/foldertype.h;  ) > 0.2cvs18.patchset
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/foldertype.c;  ) > 0.2cvs19.patchset
+( cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/python_plugin.c;  ) > 0.2cvs20.patchset
